--- a/Html-head/index.html
+++ b/Html-head/index.html
@@ -2,6 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="author" content="Fernando Galdos" />
+    <meta
+      name="description"
+      content="The MDN Web Docs Learning Area aims to provide
+complete beginners to the Web with all they need to know to get
+started with developing web sites and applications."
+    />
     <title>&lt;title&gt; element</title>
   </head>
   <body>
