--- a/Fundamentals/index.html
+++ b/Fundamentals/index.html
@@ -35,8 +35,12 @@
       <li>Remove all the seeds and stalk from the pepper, and chop coarsely</li>
       <li>Add all the ingredients into a food processor</li>
       <li>Process all the ingredients into a paste.</li>
-      <li>If you want a coarse "chunky" hummus, process it for a short time</li>
-      <li>If you want a smooth hummus, process it for a longer time</li>
+      <ul>
+        <li>
+          If you want a coarse "chunky" hummus, process it for a short time
+        </li>
+        <li>If you want a smooth hummus, process it for a longer time</li>
+      </ul>
     </ol>
     <p>
       For a different flavour, you could try blending in a small measure of
