--- a/hyperlink/index.html
+++ b/hyperlink/index.html
@@ -34,5 +34,9 @@
       of the universe, but even galaxies and star systems consist almost
       entirely of empty space.
     </p>
+
+    <a href="https://en.wikipedia.org/wiki/Outer_space">
+      <img src="./space01.jpg" alt="Outer Space in Wikipedia" width="500px" />
+    </a>
   </body>
 </html>
