linking to non-html resources

--- a/hyperlink/index.html
+++ b/hyperlink/index.html
@@ -39,4 +39,34 @@
       <img src="./space01.jpg" alt="Outer Space in Wikipedia" width="500px" />
     </a>
   </body>
+
+  <!-- Link best practices -->
+  <!-- Use clear link wording -->
+  <!-- RIGHT -->
+  <p><a href="https://firefox.com/"> Download Firefox </a></p>
+  <!-- END OF RIGHT -->
+
+  <!-- WRONG!!! -->
+  <p><a href="https://firefox.com/"> Click here </a> to download Firefox</p>
+  <!-- END OF WRONG -->
+
+  <!-- Linking to non-HTML resources — leave clear signposts -->
+  <p>
+    <a href="https://www.example.com/large-report.pdf">
+      Download the sales report (PDF, 10MB)
+    </a>
+  </p>
+
+  <p>
+    <a href="https://www.example.com/video-stream/" target="_blank">
+      Watch the video (stream opens in separate tab, HD quality)
+    </a>
+  </p>
+
+  <p>
+    <a href="https://www.example.com/car-game">
+      Play the car game (requires Flash)
+    </a>
+  </p>
+  <!-- End -->
 </html>
