--- a/hyperlink/index.html
+++ b/hyperlink/index.html
@@ -69,4 +69,13 @@
     </a>
   </p>
   <!-- End -->
+
+  <!-- Use the download attribute when linking to a download -->
+  <a
+    href="https://download.mozilla.org/?product=firefox-latest-ssl&os=win64&lang=en-US"
+    download="firefox-latest-64bit-installer.exe"
+  >
+    Download Latest Firefox for Windows (64-bit) (English, US)
+  </a>
+  <!-- End -->
 </html>
