--- a/nav-menu-test/social.html
+++ b/nav-menu-test/social.html
@@ -12,7 +12,7 @@
 
     <p>
       Welcome to my social media page. I am currently antisocial, but will start
-      putting my social media widgets on here when the time is right.
+      putting my social media widgets on here when the time is right
     </p>
   </body>
 </html>
