--- a/nav-menu-test/pictures.html
+++ b/nav-menu-test/pictures.html
@@ -7,7 +7,12 @@
 
   <body>
     <!-- put navigation menu just below here -->
-
+    <ul>
+      <li><a href="./index.html">Home</a></li>
+      <li>Pictures</li>
+      <li><a href="./projects.html">Projects</a></li>
+      <li><a href="./social.html">Social</a></li>
+    </ul>
     <h1>Pictures</h1>
 
     <p>My pictures will go here, when I start taking some.</p>
