Line breaks and horizontal rules

--- a/doc-website-structure/example.html
+++ b/doc-website-structure/example.html
@@ -131,6 +131,25 @@
         <li>...</li>
       </ul>
       <p>Total cost: $237.89</p>
+
+      <!-- Line breaks and horizontal rules -->
+
+      <p>
+        There once was a man named O'Dell<br />
+        Who loved to write HTML<br />
+        But his structure was bad, his semantics were sad<br />
+        and his markup didn't read very well.
+
+        <!-- <hr> elements create a horizontal rule in the document that denotes a thematic change in the text (such as a change in topic or scene). Visually it just looks like a horizontal line. As an example: -->
+
+
+
+<p>Ron was backed into a corner by the marauding netherbeasts. Scared, but determined to protect his friends, he raised his wand and prepared to do battle, hoping that his distress call had made it through.</p>
+<hr>
+<p>Meanwhile, Harry was sitting at home, staring at his royalty statement and pondering when the next spin off series would come out, when an enchanted distress letter flew through his window and landed in his lap. He read it hazily and sighed; "better get back to work then", he mused.</p>
+
+
+      </p>
     </div>
   </body>
 </html>
