--- a/doc-website-structure/Project01.html
+++ b/doc-website-structure/Project01.html
@@ -15,31 +15,39 @@
   </head>
 
   <body>
-    <h1>Birdwatching</h1>
-    <img src="dove.png" alt="a simple dove logo" />
+    <header>
+      <h1>Birdwatching</h1>
+      <img src="dove.png" alt="a simple dove logo" />
 
-    <ul>
-      <li><span>Home</span></li>
-      <li><a href="#">Get started</a></li>
-      <li><a href="#">Photos</a></li>
-      <li><a href="#">Gear</a></li>
-      <li><a href="#">Forum</a></li>
-    </ul>
+      <nav>
+        <ul>
+          <li><span>Home</span></li>
+          <li><a href="#">Get started</a></li>
+          <li><a href="#">Photos</a></li>
+          <li><a href="#">Gear</a></li>
+          <li><a href="#">Forum</a></li>
+        </ul>
+      </nav>
+    </header>
+
     <main>
-      <h2>Welcome</h2>
+      <article>
+        <h2>Welcome</h2>
 
-      <p>
-        Welcome to our fake birdwatching site. If this were a real site, it
-        would be the ideal place to come to learn more about birdwatching,
-        whether you are a beginner looking to learn how to get into birding, or
-        an expert wanting to share ideas, tips, and photos with other
-        like-minded people.
-      </p>
+        <p>
+          Welcome to our fake birdwatching site. If this were a real site, it
+          would be the ideal place to come to learn more about birdwatching,
+          whether you are a beginner looking to learn how to get into birding,
+          or an expert wanting to share ideas, tips, and photos with other
+          like-minded people.
+        </p>
 
-      <p>
-        So don't waste time! Get what you need, then turn off that computer and
-        get out into the great outdoors!
-      </p>
+        <p>
+          So don't waste time! Get what you need, then turn off that computer
+          and get out into the great outdoors!
+        </p>
+      </article>
+
       <aside>
         <h2>Favourite photos</h2>
 
