--- a/doc-website-structure/Project01.html
+++ b/doc-website-structure/Project01.html
@@ -17,7 +17,7 @@
   <body>
     <header>
       <h1>Birdwatching</h1>
-      <img src="dove.png" alt="a simple dove logo" />
+      <img src="./images/dove.png" alt="a simple dove logo" />
 
       <nav>
         <ul>
@@ -51,24 +51,24 @@
       <aside>
         <h2>Favourite photos</h2>
 
-        <a href="favorite-1.jpg"
+        <a href="./images/favorite-1.jpg"
           ><img
-            src="favorite-1_th.jpg"
+            src="./images/favorite-1_th.jpg"
             alt="Small black bird, black claws, long black slender beak, links to larger version of the image"
         /></a>
-        <a href="favorite-2.jpg"
+        <a href="./images/favorite-2.jpg"
           ><img
-            src="favorite-2_th.jpg"
+            src="./images/favorite-2_th.jpg"
             alt="Top half of a pretty bird with bright blue plumage on neck, light colored beak, blue headdress, links to larger version of the image"
         /></a>
-        <a href="favorite-3.jpg"
+        <a href="./images/favorite-3.jpg"
           ><img
-            src="favorite-3_th.jpg"
+            src="./images/favorite-3_th.jpg"
             alt="Top half of a large bird with white plumage, very long curved narrow light colored break, links to larger version of the image"
         /></a>
-        <a href="favorite-4.jpg"
+        <a href="./images/favorite-4.jpg"
           ><img
-            src="favorite-4_th.jpg"
+            src="./images/favorite-4_th.jpg"
             alt="Large bird, mostly white plumage with black plumage on back and rear, long straight white beak, links to larger version of the image"
         /></a>
       </aside>
