--- a/doc-website-structure/Project01.html
+++ b/doc-website-structure/Project01.html
@@ -49,7 +49,7 @@
       </article>
 
       <aside>
-        <h2>Favourite photos</h2>
+        <h2>Favorite photos</h2>
 
         <a href="./images/favorite-1.jpg"
           ><img
