video link added

--- a/Multimedia-embedding/video-audio/example.html
+++ b/Multimedia-embedding/video-audio/example.html
@@ -6,5 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Video and audio on the web</title>
   </head>
-  <body></body>
+  <body>
+    <video src="rabbit320.webm" controls>
+      <p>
+        Your browser doesn't support HTML5 video. Here is a
+        <a href="rabbit320.webm">link to the video</a> instead.
+      </p>
+    </video>
+  </body>
 </html>
