--- a/Multimedia-embedding/video-audio/example.html
+++ b/Multimedia-embedding/video-audio/example.html
@@ -13,5 +13,33 @@
         <a href="rabbit320.webm">link to the video</a> instead.
       </p>
     </video>
+    <!-- Another way -->
+    <video controls>
+      <source src="rabbit320.mp4" type="video/mp4" />
+      <source src="rabbit320.webm" type="video/webm" />
+      <p>
+        Your browser doesn't support HTML5 video. Here is a
+        <a href="rabbit320.mp4">link to the video</a> instead.
+      </p>
+    </video>
+
+    <!-- Other <video> features -->
+    <video
+      controls
+      width="400"
+      height="400"
+      autoplay
+      loop
+      muted
+      preload="auto"
+      poster="poster.png"
+    >
+      <source src="rabbit320.mp4" type="video/mp4" />
+      <source src="rabbit320.webm" type="video/webm" />
+      <p>
+        Your browser doesn't support HTML video. Here is a
+        <a href="rabbit320.mp4">link to the video</a> instead.
+      </p>
+    </video>
   </body>
 </html>
