video with captions and more

--- a/Multimedia-embedding/video-audio/example.html
+++ b/Multimedia-embedding/video-audio/example.html
@@ -41,5 +41,27 @@
         <a href="rabbit320.mp4">link to the video</a> instead.
       </p>
     </video>
+
+    <!-- The <audio> element -->
+    <audio controls>
+      <source src="viper.mp3" type="audio/mp3" />
+      <source src="viper.ogg" type="audio/ogg" />
+      <p>
+        Your browser doesn't support HTML5 audio. Here is a
+        <a href="viper.mp3">link to the audio</a> instead.
+      </p>
+    </audio>
+
+    <!-- Displaying video text tracks -->
+    <video controls>
+      <source src="example.mp4" type="video/mp4" />
+      <source src="example.webm" type="video/webm" />
+      <track
+        kind="subtitles"
+        src="subtitles_es.vtt"
+        srclang="es"
+        label="Spanish"
+      />
+    </video>
   </body>
 </html>
