map added as iframe

--- a/Multimedia-embedding/object-to-iframe/example.html
+++ b/Multimedia-embedding/object-to-iframe/example.html
@@ -19,5 +19,16 @@
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
       allowfullscreen
     ></iframe>
+
+    <!-- Incorporar un map -->
+    <h2>Apple</h2>
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3037.967563886635!2d-122.0296953361563!3d37.33138308598746!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fb5b13fdcecf7%3A0xdc5c21978a3d43f5!2sApple!5e0!3m2!1ses-419!2spe!4v1616127417929!5m2!1ses-419!2spe"
+      width="600"
+      height="450"
+      style="border: 0"
+      allowfullscreen=""
+      loading="lazy"
+    ></iframe>
   </body>
 </html>
