--- a/Multimedia-embedding/object-to-iframe/example.html
+++ b/Multimedia-embedding/object-to-iframe/example.html
@@ -30,5 +30,21 @@
       allowfullscreen=""
       loading="lazy"
     ></iframe>
+
+    <!-- Another way to use iframe -->
+    <iframe
+      src="https://developer.mozilla.org/en-US/docs/Glossary"
+      width="100%"
+      height="500"
+      frameborder="0"
+      allowfullscreen
+      sandbox
+    >
+      <p>
+        <a href="/en-US/docs/Glossary">
+          Fallback link for browsers that don't support iframes
+        </a>
+      </p>
+    </iframe>
   </body>
 </html>
