embedding SVG with iframe and html file

--- a/Multimedia-embedding/vector-graphics/example.html
+++ b/Multimedia-embedding/vector-graphics/example.html
@@ -17,5 +17,16 @@
       <rect width="100%" height="100%" fill="black" />
       <circle cx="150" cy="100" r="90" fill="blue" />
     </svg>
+
+    <!-- How to include SVG code inside your HTML -->
+    <svg width="300" height="200">
+      <rect width="100%" height="100%" fill="green" />
+    </svg>
+    <!-- End -->
+    <!-- How to embed an SVG with an <iframe> -->
+    <iframe src="triangle.svg" width="500" height="500" sandbox>
+      <img src="triangle.png" alt="Triangle with three unequal sides" />
+    </iframe>
+    <!-- End -->
   </body>
 </html>
