--- a/Multimedia-embedding/Mozila-Splash/index.html
+++ b/Multimedia-embedding/Mozila-Splash/index.html
@@ -103,8 +103,18 @@
   <body>
     <header>
       <h1>Mozilla</h1>
-      <!-- insert <img> element, link to the small
-          version of the Firefox logo -->
+      <picture>
+        <source
+          media="(max-width: 120px)"
+          srcset="./images/firefox_logo-only_RGB_120.png"
+        />
+        <source
+          media="(min-width: 400px)"
+          srcset="./images/firefox_logo-only_RGB_400.png"
+        />
+        <img src="./originals/firefox_logo-only_RGB.png alt="Mozilla Firefox
+        Logo">
+      </picture>
     </header>
 
     <main>
@@ -134,16 +144,44 @@
       <div class="further-info">
         <!-- insert images with srcsets and sizes -->
         <a href="https://www.mozilla.org/en-US/firefox/new/">
-          <img />
+          <picture>
+            <source media="(max-width: 120px)"
+            srcset="./images/mozilla-dinosaur-head-120.png>
+            <source
+              media="(min-width: 400px)"
+              srcset="./images/mozilla-dinosaur-head-400.png"
+            />
+            <img
+              src="./originals/mozilla-dinosaur-head.png"
+              alt="Red-head mozilla dinosaur"
+            />
+          </picture>
         </a>
         <a href="https://www.mozilla.org/">
           <img />
         </a>
         <a href="https://addons.mozilla.org/">
-          <img />
+          <picture>
+            <source
+              media="(max-width: 120px)"
+              srcset="./images/firefox-addons-120.jpg"
+            />
+            <source
+              media="(min-width: 400px)"
+              srcset="./images/firefox-addons-400.jpg"
+            />
+            <img
+              src="./originals/firefox-addons.jpg"
+              alt="Firefox logo addons"
+            />
+          </picture>
         </a>
         <a href="https://developer.mozilla.org/en-US/">
-          <img />
+          <picture>
+            <source media="(max-width: 120px)" srcset="./images/mdn.svg" />
+            <source media="(min-width: 400px)" srcset="./images/mdn.svg" />
+            <img src="./images/mdn.svg" alt="MDN blue logo" />
+          </picture>
         </a>
         <div class="clearfix"></div>
       </div>
