--- a/Multimedia-embedding/html-tables/example.html
+++ b/Multimedia-embedding/html-tables/example.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Table template</title>
-    <link href="minimal-table.css" rel="stylesheet" type="text/css" />
+    <link href="./styles.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <h1>Table template</h1>
