--- a/Multimedia-embedding/html-tables/example.html
+++ b/Multimedia-embedding/html-tables/example.html
@@ -7,5 +7,8 @@
   </head>
   <body>
     <h1>Table template</h1>
+    <table>
+      <td>Hi, I'm your first cell.</td>
+    </table>
   </body>
 </html>
