adding more rows

--- a/Multimedia-embedding/html-tables/example.html
+++ b/Multimedia-embedding/html-tables/example.html
@@ -9,6 +9,9 @@
     <h1>Table template</h1>
     <table>
       <td>Hi, I'm your first cell.</td>
+      <td>I'm your second cell.</td>
+      <td>I'm your third cell.</td>
+      <td>I'm your fourth cell.</td>
     </table>
   </body>
 </html>
