second row added, finally a table

--- a/Multimedia-embedding/html-tables/example.html
+++ b/Multimedia-embedding/html-tables/example.html
@@ -8,10 +8,18 @@
   <body>
     <h1>Table template</h1>
     <table>
-      <td>Hi, I'm your first cell.</td>
-      <td>I'm your second cell.</td>
-      <td>I'm your third cell.</td>
-      <td>I'm your fourth cell.</td>
+      <tr>
+        <td>Hi, I'm your first cell.</td>
+        <td>I'm your second cell.</td>
+        <td>I'm your third cell.</td>
+        <td>I'm your fourth cell.</td>
+      </tr>
+      <tr>
+        <td>Second row, first column</td>
+        <td>Second row, second column</td>
+        <td>Second row, third column</td>
+        <td>Second row, fourth column</td>
+      </tr>
     </table>
   </body>
 </html>
