--- a/Multimedia-embedding/html-tables/example.html
+++ b/Multimedia-embedding/html-tables/example.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1>Table template</h1>
+    <!-- The tag TH is used for header -->
     <table>
       <tr>
         <td>Hi, I'm your first cell.</td>
