added all colspan

--- a/Multimedia-embedding/html-tables/example2.html
+++ b/Multimedia-embedding/html-tables/example2.html
@@ -13,7 +13,7 @@
         <th colspan="2">Animals</th>
       </tr>
       <tr>
-        <th>Hippopotamus</th>
+        <th colspan="2">Hippopotamus</th>
       </tr>
       <tr>
         <th>Horse</th>
@@ -23,7 +23,7 @@
         <td>Stallion</td>
       </tr>
       <tr>
-        <th>Crocodile</th>
+        <th colspan="2">Crocodile</th>
       </tr>
       <tr>
         <th>Chicken</th>
