using rowspan to span acrros columns

--- a/Multimedia-embedding/html-tables/example2.html
+++ b/Multimedia-embedding/html-tables/example2.html
@@ -10,13 +10,15 @@
 
     <table>
       <tr>
+        <!-- We use colspan to span across two columns. -->
         <th colspan="2">Animals</th>
       </tr>
       <tr>
         <th colspan="2">Hippopotamus</th>
       </tr>
       <tr>
-        <th>Horse</th>
+        <!-- We use rowspan to span across two rows. -->
+        <th rowspan="2">Horse</th>
         <td>Mare</td>
       </tr>
       <tr>
@@ -26,7 +28,7 @@
         <th colspan="2">Crocodile</th>
       </tr>
       <tr>
-        <th>Chicken</th>
+        <th rowspan="2">Chicken</th>
         <td>Hen</td>
       </tr>
       <tr>
