--- a/Multimedia-embedding/html-tables/Task1/task1.html
+++ b/Multimedia-embedding/html-tables/Task1/task1.html
@@ -34,6 +34,14 @@
     <h1>School timetable</h1>
 
     <table>
+      <colgroup>
+        <col span="2" />
+        <col style="background-color: #97db9a" />
+        <col style="width: 42px" />
+        <col style="background-color: #97db9a" />
+        <col style="background-color: #dcc48e; border: 4px solid #c1437a" />
+        <col span="2" style="width: 42px" />
+      </colgroup>
       <tr>
         <td>&nbsp;</td>
         <th>Mon</th>
