--- a/Multimedia-embedding/html-tables/Task1/task1.html
+++ b/Multimedia-embedding/html-tables/Task1/task1.html
@@ -34,6 +34,9 @@
     <h1>School timetable</h1>
 
     <table>
+      <caption>
+        Teacher's school timetable
+      </caption>
       <colgroup>
         <col span="2" />
         <col style="background-color: #97db9a" />
