adding colspan and more css styles to table

--- a/Multimedia-embedding/html-tables/table-structure/index.html
+++ b/Multimedia-embedding/html-tables/table-structure/index.html
@@ -14,43 +14,55 @@
         How I chose to spend my money
       </caption>
       <tr>
-        <th>Purchase</th>
-        <th>Location</th>
-        <th>Date</th>
-        <th>Evaluation</th>
-        <th>Cost (€)</th>
+        <thead>
+          <th>Purchase</th>
+          <th>Location</th>
+          <th>Date</th>
+          <th>Evaluation</th>
+          <th>Cost (€)</th>
+        </thead>
       </tr>
       <tr>
-        <td>SUM</td>
-        <td>118</td>
+        <tfoot>
+          <td colspan="4">SUM</td>
+          <td>118</td>
+        </tfoot>
       </tr>
       <tr>
-        <td>Haircut</td>
-        <td>Hairdresser</td>
-        <td>12/09</td>
-        <td>Great idea</td>
-        <td>30</td>
+        <tbody>
+          <td>Haircut</td>
+          <td>Hairdresser</td>
+          <td>12/09</td>
+          <td>Great idea</td>
+          <td>30</td>
+        </tbody>
       </tr>
       <tr>
-        <td>Lasagna</td>
-        <td>Restaurant</td>
-        <td>12/09</td>
-        <td>Regrets</td>
-        <td>18</td>
+        <tbody>
+          <td>Lasagna</td>
+          <td>Restaurant</td>
+          <td>12/09</td>
+          <td>Regrets</td>
+          <td>18</td>
+        </tbody>
       </tr>
       <tr>
-        <td>Shoes</td>
-        <td>Shoeshop</td>
-        <td>13/09</td>
-        <td>Big regrets</td>
-        <td>65</td>
+        <tbody>
+          <td>Shoes</td>
+          <td>Shoeshop</td>
+          <td>13/09</td>
+          <td>Big regrets</td>
+          <td>65</td>
+        </tbody>
       </tr>
       <tr>
-        <td>Toothpaste</td>
-        <td>Supermarket</td>
-        <td>13/09</td>
-        <td>Good</td>
-        <td>5</td>
+        <tbody>
+          <td>Toothpaste</td>
+          <td>Supermarket</td>
+          <td>13/09</td>
+          <td>Good</td>
+          <td>5</td>
+        </tbody>
       </tr>
     </table>
   </body>
