--- a/Multimedia-embedding/html-tables/visually-impaired-tables/Task1.html
+++ b/Multimedia-embedding/html-tables/visually-impaired-tables/Task1.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Items sold summary</title>
-    <link href="minimal-table.css" rel="stylesheet" type="text/css" />
+    <link href="./styles.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
