id for th added

--- a/Multimedia-embedding/html-tables/visually-impaired-tables/Task1.html
+++ b/Multimedia-embedding/html-tables/visually-impaired-tables/Task1.html
@@ -17,17 +17,17 @@
         <tr>
           <td>&nbsp;</td>
           <td>&nbsp;</td>
-          <th colspan="3">Clothes</th>
-          <th colspan="2">Accessories</th>
+          <th id="clothes" colspan="3">Clothes</th>
+          <th id="accessories" colspan="2">Accessories</th>
         </tr>
         <tr>
           <td>&nbsp;</td>
           <td>&nbsp;</td>
-          <th>Trousers</th>
+          <th id="trousers">Trousers</th>
           <th>Skirts</th>
-          <th>Dresses</th>
-          <th>Bracelets</th>
-          <th>Rings</th>
+          <th id="dresses">Dresses</th>
+          <th id="bracelets">Bracelets</th>
+          <th id="rings">Rings</th>
         </tr>
       </thead>
       <tbody>
