id and headers added

--- a/Multimedia-embedding/html-tables/visually-impaired-tables/Task1.html
+++ b/Multimedia-embedding/html-tables/visually-impaired-tables/Task1.html
@@ -32,46 +32,46 @@
       </thead>
       <tbody>
         <tr>
-          <th rowspan="3">Belgium</th>
-          <th>Antwerp</th>
-          <td>56</td>
-          <td>22</td>
-          <td>43</td>
-          <td>72</td>
-          <td>23</td>
+          <th id="belgium" rowspan="3">Belgium</th>
+          <th id="antwerp">Antwerp</th>
+          <td headers="clothes trousers belgium antwerp">56</td>
+          <td headers="clothes skirts belgium antwerp">22</td>
+          <td headers="clothes dresses belgium antwerp">43</td>
+          <td headers="accessories bracelets belgium antwerp">72</td>
+          <td headers="accessories rings belgium antwerp">23</td>
         </tr>
         <tr>
-          <th>Gent</th>
-          <td>46</td>
-          <td>18</td>
-          <td>50</td>
-          <td>61</td>
-          <td>15</td>
+          <th id="gent">Gent</th>
+          <td headers="clothes trousers belgium gent">46</td>
+          <td headers="clothes skirts belgium gent">18</td>
+          <td headers="clothes dresses belgium gent">50</td>
+          <td headers="accessories bracelets belgium gent">61</td>
+          <td headers="accessories rings belgium gent">15</td>
         </tr>
         <tr>
-          <th>Brussels</th>
-          <td>51</td>
-          <td>27</td>
-          <td>38</td>
-          <td>69</td>
-          <td>28</td>
+          <th id="brussels">Brussels</th>
+          <td headers="clothes trousers belgium brussels">51</td>
+          <td headers="clothes skirts belgium brussels">27</td>
+          <td headers="clothes dresses belgium brussels">38</td>
+          <td headers="accessories bracelets belgium brussels">69</td>
+          <td headers="accessories rings belgium brussels">28</td>
         </tr>
         <tr>
-          <th rowspan="2">The Netherlands</th>
-          <th>Amsterdam</th>
-          <td>89</td>
-          <td>34</td>
-          <td>69</td>
-          <td>85</td>
-          <td>38</td>
+          <th rowspan="2" id="netherlands">The Netherlands</th>
+          <th id="amsterdam">Amsterdam</th>
+          <td headers="clothes trousers netherlands amsterdam">89</td>
+          <td headers="clothes skirts netherlands amsterdam">34</td>
+          <td headers="clothes dresses netherlands amsterdam">69</td>
+          <td headers="accessories bracelets netherlands amsterdam">85</td>
+          <td headers="accessories rings netherlands amsterdam">38</td>
         </tr>
         <tr>
-          <th>Utrecht</th>
-          <td>80</td>
-          <td>12</td>
-          <td>43</td>
-          <td>36</td>
-          <td>19</td>
+          <th id="utrecht">Utrecht</th>
+          <td headers="clothes trousers netherlands utrecht">80</td>
+          <td headers="clothes skirts netherlands utrecht">12</td>
+          <td headers="clothes dresses netherlands utrecht">43</td>
+          <td headers="accessories bracelets netherlands utrecht">36</td>
+          <td headers="accessories rings netherlands utrecht">19</td>
         </tr>
       </tbody>
     </table>
