mars and earth data added

--- a/Multimedia-embedding/html-tables/assessment/index.html
+++ b/Multimedia-embedding/html-tables/assessment/index.html
@@ -62,18 +62,27 @@
         </tr>
         <tr>
           <th id="earth">Earth</th>
-          <td headers="earth mass"></td>
-          <td headers="earth diameter"></td>
-          <td headers="earth density"></td>
-          <td headers="earth gravity"></td>
-          <td headers="earth length of day"></td>
-          <td headers="earth distance from sun"></td>
-          <td headers="earth mean temperature"></td>
-          <td headers="earth number of moons"></td>
-          <td headers="earth notes"></td>
+          <td headers="earth mass">5.97</td>
+          <td headers="earth diameter">12,756</td>
+          <td headers="earth density">5514</td>
+          <td headers="earth gravity">9.8</td>
+          <td headers="earth length of day">24.0</td>
+          <td headers="earth distance from sun">149.6</td>
+          <td headers="earth mean temperature">15</td>
+          <td headers="earth number of moons">1</td>
+          <td headers="earth notes">Our world</td>
         </tr>
         <tr>
-          <th>Mars</th>
+          <th id="mars">Mars</th>
+          <td headers="mars mass">0.642</td>
+          <td headers="mars diameter">6,792</td>
+          <td headers="mars density">3933</td>
+          <td headers="mars gravity">3.7</td>
+          <td headers="mars length of day">24.7</td>
+          <td headers="mars distance from sun">227.9</td>
+          <td headers="mars mean temperature">-65</td>
+          <td headers="mars number of moons">2</td>
+          <td headers="mars notes">The red planet</td>
         </tr>
         <tr>
           <th rowspan="4">Jovian planets</th>
