jupiter data added

--- a/Multimedia-embedding/html-tables/assessment/index.html
+++ b/Multimedia-embedding/html-tables/assessment/index.html
@@ -87,7 +87,16 @@
         <tr>
           <th rowspan="4">Jovian planets</th>
           <th rowspan="2">Gas giants</th>
-          <th>Jupiter</th>
+          <th id="jupiter">Jupiter</th>
+          <td headers="jupiter mass">1898</td>
+          <td headers="jupiter diameter">142,984</td>
+          <td headers="jupiter density">1326</td>
+          <td headers="jupiter gravity">23.1</td>
+          <td headers="jupiter length of day">9.9</td>
+          <td headers="jupiter distance from sun">778.6</td>
+          <td headers="jupiter mean temperature">-110</td>
+          <td headers="jupiter number of moons">67</td>
+          <td headers="jupiter notes">The largest planet</td>
         </tr>
         <tr>
           <th>Saturn</th>
