--- a/Multimedia-embedding/html-tables/assessment/index.html
+++ b/Multimedia-embedding/html-tables/assessment/index.html
@@ -112,10 +112,28 @@
         </tr>
         <tr>
           <th rowspan="2">Ice giants</th>
-          <th>Uranus</th>
+          <th id="uranus">Uranus</th>
+          <td headers="uranus mass">86.5</td>
+          <td headers="uranus diameter">51,118</td>
+          <td headers="uranus density">1271</td>
+          <td headers="uranus gravity">8.7</td>
+          <td headers="uranus length of day">17.2</td>
+          <td headers="uranus distance from sun">2872.5</td>
+          <td headers="uranus mean temperature">-195</td>
+          <td headers="uranus number of moons">27</td>
+          <td headers="uranus notes"></td>
         </tr>
         <tr>
-          <th>Neptune</th>
+          <th id="neptune">Neptune</th>
+          <td headers="neptune mass">102</td>
+          <td headers="neptune diameter">49,528</td>
+          <td headers="neptune density">1638</td>
+          <td headers="neptune gravity">11.0</td>
+          <td headers="neptune length of day">16.1</td>
+          <td headers="neptune distance from sun">4495.1</td>
+          <td headers="neptune mean temperature">-200</td>
+          <td headers="neptune number of moons">14</td>
+          <td headers="neptune notes"></td>
         </tr>
         <tr>
           <th colspan="2">Dwarf planets</th>
